--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Leo Coronel</title>
 </head>
 <body>
-    <h1>H1 RANDOM</h1>
+    <div class="profile">
+        <img src="./img/meno.png" alt="Foto de perfil">
+        <ul class="list">
+            <li class="list__item">
+                <p>Nombre: <span>Coronel Leonardo</span></p>
+            </li>
+            <li class="list__item">
+                <p>Edad: <span>22</span></p>
+            </li>
+            <li class="list__item">
+                <p>Mail: <span>leomcoronel99@gmail.com</span></p>
+            </li>
+        </ul>
+    </div>
+    <div class="contact-form">
+        <form action="">
+            <div class="form-group">
+                <label for="name">Tu nombre: </label>
+                <div class="form-input">
+                    <input 
+                        type="text" 
+                        id="name" 
+                        name="name" 
+                        class="form-control" 
+                        required
+                    >
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="email">Tu email: </label>
+                <div class="form-input">
+                    <input 
+                        type="email" 
+                        id="email" 
+                        name="email" 
+                        class="form-control" 
+                        required
+                    >
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="message">Tu mensaje: </label>
+                <div class="form-input">
+                    <textarea name="textarea" rows="10" cols="50">Deja tu mensaje aquí</textarea>
+                </div>
+            </div>
+            <div class="form-group">
+                <button type="submit" id="submit-btn" class="btn">Enviar</button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
