Feature src folder added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="profile">
-        <img src="./img/meno.png" alt="Foto de perfil">
+        <img src=".src/img/meno.png" alt="Foto de perfil">
         <ul class="list">
             <li class="list__item">
                 <p>Nombre: <span>Coronel Leonardo</span></p>
